--- a/index.html
+++ b/index.html
@@ -357,13 +357,30 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
-		<a href="https://pawanashettigar.github.io">Pawana's Website, research work and projects, poems, etc(Everything on this website is subject to copyright)</a> © 2025 by <a href="https://pawana.shettigargithub.io">Pawana Giridhar Shettigar</a> is licensed under <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/">CC BY-NC-ND 4.0</a><img src="https://mirrors.creativecommons.org/presskit/icons/cc.svg" alt="" style="max-width: 1em;max-height:1em;margin-left: .2em;"><img src="https://mirrors.creativecommons.org/presskit/icons/by.svg" alt="" style="max-width: 1em;max-height:1em;margin-left: .2em;"><img src="https://mirrors.creativecommons.org/presskit/icons/nc.svg" alt="" style="max-width: 1em;max-height:1em;margin-left: .2em;"><img src="https://mirrors.creativecommons.org/presskit/icons/nd.svg" alt="" style="max-width: 1em;max-height:1em;margin-left: .2em;">
+		<div style="text-align: center; font-size: 0.9em; color: #666; margin-top: 2em;">
+  <a href="https://pawana.github.io" target="_blank" rel="noopener">
+    All content on this website is copyrighted. All rights reserved by Pawana Shettigar.
+  </a>
+  <br>
+  © 2025 by
+  <a href="https://pawana.github.io" target="_blank" rel="author">Pawana Giridhar Shettigar</a>
+  is licensed under
+  <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/" target="_blank" rel="license">
+    Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International (CC BY-NC-ND 4.0)
+  </a>
+  <br>
+  <img src="https://mirrors.creativecommons.org/presskit/icons/cc.svg" alt="CC" style="max-width:1em;max-height:1em; margin-left:0.2em;">
+  <img src="https://mirrors.creativecommons.org/presskit/icons/by.svg" alt="BY" style="max-width:1em;max-height:1em; margin-left:0.2em;">
+  <img src="https://mirrors.creativecommons.org/presskit/icons/nc.svg" alt="NC" style="max-width:1em;max-height:1em; margin-left:0.2em;">
+  <img src="https://mirrors.creativecommons.org/presskit/icons/nd.svg" alt="ND" style="max-width:1em;max-height:1em; margin-left:0.2em;">
+</div>
 
 
 
 
 	</body>
 </html>
+
 
 
 
