--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright">&copy; Pawana Shettigar <a href="https://pawanashettigar.github.io">HTML5 UP</a>.</p>
+						<p class="copyright">&copy; Pawana Shettigar 2025<a href="https://pawanashettigar.github.io">^_^</a>.</p>
 					</footer>
 
 			</div>
@@ -380,6 +380,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
 
 
