--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 						<!-- Intro -->
 							<article id="intro">
 								<h2 class="major">Intro</h2>
-								<span class="1000008164.jpg"><img src="1000008164.jpg" alt="" /></span>
+								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
 								<p>WHY SO CURIOUS? By the way, check out my <a href="#CV">awesome work</a>.</p>
 								<p>Will update soon</p>
 							</article>
@@ -64,7 +64,7 @@
 							<article id="Research work and projects">
 								<h2 class="major">Research work and projects</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-								<p> Still working on it</p>
+								<p>Still working on it</p>
 							</article>
 
 						<!-- Contact -->
@@ -381,6 +381,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
 
 
