--- a/index.html
+++ b/index.html
@@ -66,7 +66,21 @@
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
 								<p>Still working on it</p>
 							</article>
+						
+						<!-- Poems -->
+						    <article id="Poems">
+								<h2 class="major">Poems</h2>
+								<span class="image main"><img src="images/pic03.jpg" alt=""/></span>
+								<p>will post soon</p>
+							</article>
 
+						<!-- Cosmic vault -->
+						    <aricle id="Cosmic vault">
+								<h2 class="major">Cosmic vault</h2>
+								<span class="image main"><img src="images/pic03.jpg" alt=""/></span>
+								<p>Not really sure what I'll add here</p>
+							</aricle>
+									
 						<!-- Contact -->
 							<article id="contact">
 								<h2 class="major">Contact</h2>
@@ -381,6 +395,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
 
 
