--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 						</div>
 						<nav>
 							<ul>
-								<li><a href="#intro">Intro</a></li>
+								<li><a href="#Intro">Intro</a></li>
 								<li><a href="#CV">CV</a></li>
 								<li><a href="#Research work and projects">Research work and projects</a></li>
 								<li><a href="#Poems">Poems</a></li>
@@ -395,6 +395,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
 
 
