--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 							<ul>
 								<li><a href="#Intro">Intro</a></li>
 								<li><a href="#CV">CV</a></li>
-								<li><a href="#Research work and projects">Research work and projects</a></li>
+								<li><a href="#research-work-and-projects">Research work and projects</a></li>
 								<li><a href="#Poems">Poems</a></li>
 								<li><a href="#Cosmic Vault">Cosmic vault</a></li>
 								<li><a href="#contact">Contact</a></li>
@@ -61,7 +61,7 @@
 							</article>
 
 						<!-- Research work and projects -->
-							<article id="Research work and projects">
+							<article id="research-work-and-projects">
 								<h2 class="major">Research work and projects</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
 								<p>Still working on it</p>
@@ -395,6 +395,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
 
 
