--- a/index.html
+++ b/index.html
@@ -75,11 +75,11 @@
 							</article>
 
 						<!-- Cosmic vault -->
-						    <aricle id="Cosmic vault">
+						    <article id="Cosmic vault">
 								<h2 class="major">Cosmic vault</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt=""/></span>
 								<p>Not really sure what I'll add here</p>
-							</aricle>
+							</article>
 									
 						<!-- Contact -->
 							<article id="contact">
@@ -395,6 +395,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
 
 
