--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 								<li><a href="#CV">CV</a></li>
 								<li><a href="#research-work-and-projects">Research work and projects</a></li>
 								<li><a href="#Poems">Poems</a></li>
-								<li><a href="#Cosmic Vault">Cosmic vault</a></li>
+								<li><a href="#cosmic-vault">Cosmic vault</a></li>
 								<li><a href="#contact">Contact</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
@@ -75,7 +75,7 @@
 							</article>
 
 						<!-- Cosmic vault -->
-						    <article id="Cosmic vault">
+						    <article id="cosmic-vault">
 								<h2 class="major">Cosmic vault</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt=""/></span>
 								<p>Not really sure what I'll add here</p>
@@ -395,6 +395,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
 
 
