--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
 							<ul>
 								<li><a href="#Intro">Intro</a></li>
 								<li><a href="#CV">CV</a></li>
-								<li><a href="#research-work-and-projects">Research work and projects</a></li>
+								<li><a href="#research-work-and-projects">Research</a></li>
 								<li><a href="#Poems">Poems</a></li>
-								<li><a href="#cosmic-vault">Cosmic vault</a></li>
+								<li><a href="#cosmic-vault">Vault</a></li>
 								<li><a href="#contact">Contact</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
@@ -395,6 +395,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
 
 
