--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 								<li><a href="#Intro">Intro</a></li>
 								<li><a href="#CV">CV</a></li>
 								<li><a href="#research-work-and-projects">Research</a></li>
-								<li><a href="#Poems">Poems</a></li>
+								<li><a href="#poem">Poems</a></li>
 								<li><a href="#cosmic-vault">Vault</a></li>
 								<li><a href="#contact">Contact</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
@@ -68,7 +68,7 @@
 							</article>
 						
 						<!-- Poems -->
-						    <article id="Poems">
+						    <article id="poem">
 								<h2 class="major">Poems</h2>
 								<h3 class="book-title">Title</h3>
 								<span class="image main"><img src="images/pic03.jpg" alt=""/></span>
@@ -421,6 +421,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
 
 
