--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 										<h3>Poem title 1</h3>
 									    <p>verse of poem 1</p>
 									    <div class="poem-nav-row">
-											<a href="#Poems" class="back button-nav">Back to poems</a>
+											<a href="#Poem" class="back button-nav">Back to poems</a>
 									        <a href="#poem-2" class="next-poem button-nav">Next &rarr;</a>
 									    </div>
 									</section>
@@ -100,7 +100,7 @@
 										<h3>Poem title 2</h3>
 									    <p>verse of poem 2</p>
 									    <div class="poem-nav-row">
-											<a href="#Poems" class="back button-nav">Back to poems</a>
+											<a href="#Poem" class="back button-nav">Back to poems</a>
 									        <a href="#poem-3" class="next-poem button-nav">Next &rarr;</a>
 										</div>
 									</section>
@@ -427,6 +427,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
 
 
