--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
 										    <li><a href="#poem-3">Poem title 3</a></li>
 										</ul>
 									</nav>
+								</div>
 									
 									<section id="poem-1" class="poem hidden">
 										<h3>Poem title 1</h3>
@@ -427,6 +428,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
 
 
