--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 									        <a href="#poem-3" class="next-poem button-nav">Next &rarr;</a>
 										</div>
 									</section>
-							</article>
+							</section>
 
 						<!-- Cosmic vault -->
 						    <section id="cosmic-vault" class="panel-light">
@@ -429,6 +429,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
 
 
