--- a/index.html
+++ b/index.html
@@ -45,31 +45,31 @@
 					<div id="main">
 
 						<!-- Intro -->
-							<section id="intro" class="panel-light">
+							<article id="intro" class="panel-light">
 								<h2 class="section-title">Intro</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
 								<p>WHY SO CURIOUS? By the way, check out my <a href="#CV">awesome work</a>.</p>
 								<p>Will update soon</p>
-							</section>
+							</article>
 
 						<!-- CV -->
-							<section id="CV" class="panel-main">
+							<article id="CV" class="panel-main">
 								<h2 class="section-title">CV</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
 								<p>Why you stalking me dude ?</p>
 								<p>Will update soon</p>
 								<a href="cv.pdf" class="pink-btn">Download CV</a>
-							</section>
+							</article>
 
 						<!-- Research work and projects -->
-							<section id="research-work-and-projects" class="panel-main">
+							<article id="research-work-and-projects" class="panel-main">
 								<h2 class="section-title">Research work and projects</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
 								<p>Still working on it</p>
-							</section>
+							</article>
 						
 						<!-- Poems -->
-						    <section id="poem" class="panel-main">
+						    <article id="poem" class="panel-main">
 								<div id="poem-welcome" class="poem-welcome active">
 									<h3>Welcome to my poetry collection!</h3>
 									<p>Would you like to view my poems?</p>
@@ -106,17 +106,17 @@
 									        <a href="#poem-3" class="next-poem button-nav">Next &rarr;</a>
 										</div>
 									</section>
-							</section>
+							</article>
 
 						<!-- Cosmic vault -->
-						    <section id="cosmic-vault" class="panel-light">
+						    <article id="cosmic-vault" class="panel-light">
 								<h2 class="section-title">Cosmic vault</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt=""/></span>
 								<p>Not really sure what I'll add here</p>
-							</section>
+							</article>
 									
 						<!-- Contact -->
-							<section id="contact" class="panel-main">
+							<article id="contact" class="panel-main">
 								<h2 class="section-title">Contact</h2>
 								<form method="post" action="#">
 									<div class="fields">
@@ -144,7 +144,7 @@
 									<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 									<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
-							</section>
+							</article>
 
 						<!-- Elements -->
 							<article id="elements">
@@ -429,6 +429,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
 
 
