--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 						<!-- Contact -->
 							<article id="contact" class="panel-main">
 								<h2 class="section-title">Contact</h2>
-								<form method="post" action="#">
+								<form method="post" action="https://formspree.io/f/xpwlkknk">
 									<div class="fields">
 										<div class="field half">
 											<label for="name">Name</label>
