--- a/index.html
+++ b/index.html
@@ -102,8 +102,17 @@
 										<h3>Poem title 2</h3>
 									    <p>verse of poem 2</p>
 									    <div class="poem-nav-row">
-											<a href="#Poem" class="back button-nav">Back to poems</a>
+											<a href="#poem-1" class="back button-nav">Back to poems</a>
 									        <a href="#poem-3" class="next-poem button-nav">Next &rarr;</a>
+										</div>
+									</section>
+								
+								    <section id="poem-3" class="poem hidden">
+										<h3>Poem title 3</h3>
+										<p>verse of poem</p>
+										<div class="poem-nav-row">
+											<a href="#poem-2" class="back button-nav">Back to poems</a>
+											<a href="#poem-1" class="next-poem button-nav">Next &rarr;</a>
 										</div>
 									</section>
 							</article>
@@ -429,6 +438,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
 
 
