--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 					<div id="main">
 
 						<!-- Intro -->
-							<article id="intro" class="panel-light">
+							<article id="intro" class="panel-main">
 								<h2 class="section-title">Intro</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
 								<p>WHY SO CURIOUS? By the way, check out my <a href="#CV">awesome work</a>.</p>
@@ -118,7 +118,7 @@
 							</article>
 
 						<!-- Cosmic vault -->
-						    <article id="cosmic-vault" class="panel-light">
+						    <article id="cosmic-vault" class="panel-main">
 								<h2 class="section-title">Cosmic vault</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt=""/></span>
 								<p>Not really sure what I'll add here</p>
@@ -438,6 +438,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
 
 
