--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 						</div>
 						<div class="content">
 							<div class="inner">
-								<h1>Pawana Shettigar</h1>
+								<h1 style="text-transform: none;">>Pawana Shettigar</h1>
 								<p>Welcome to the cosmic universe of an aspiring astronomer (◠‿◠)</p>
 							</div>
 						</div>
@@ -438,6 +438,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
 
 
