--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 							<article id="intro" class="panel-main">
 								<h2 class="section-title">Intro</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-								<p>WHY SO CURIOUS? By the way, check out my <a href="#CV">awesome work</a>.</p>
+								<p>WHY SO CURIOUS? Stop <a href="#CV">Stalking Me!!</a>.</p>
 								<p>Will update soon</p>
 							</article>
 
@@ -56,8 +56,8 @@
 							<article id="CV" class="panel-main">
 								<h2 class="section-title">CV</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p>Why you stalking me dude ?</p>
-								<p>Will update soon</p>
+								<p>Why you still stalking me dude?</p>
+								<p>Mind your own business! Ohhh, you don't have that?</p>
 								<a href="cv.pdf" class="pink-btn">Download CV</a>
 							</article>
 
@@ -438,6 +438,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
 
 
