--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 								<ul class="icons">
 									<li><a href="https://instagram.com/astropawana" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 									<li><a href="https://github.com/pawanashettigar" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-        <li><a href="https://www.linkedin.com/in/pawana-shettigar-182087374?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+<li><a href="https://www.linkedin.com/in/pawana-shettigar" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 								</ul>
 							</article>
 
