--- a/index.html
+++ b/index.html
@@ -80,14 +80,15 @@
 								</div>
 								
 								<div id="poem-list" class="poem-list hidden">
-									<h2 class="section-title">Title</h2>
+									<h2 class="section-title">The gravity of cosmic emotions</h2>
 								    <span class="image main"><img src="images/pic03.jpg" alt=""/></span>
 								    <p class="intro">will post soon</p>
 								    <nav class="poem-nav">
 										<ul>
-											<li><a href="#poem-1">Poem title 1</a></li>
-										    <li><a href="#poem-2">Poem title 2</a></li>
-										    <li><a href="#poem-3">Poem title 3</a></li>
+											<li><a href="#poem-1">Thought I finally seized the edge</a></li>
+										    <li><a href="#poem-2">The Whispers of the Galaxies</a></li>
+										    <li><a href="#poem-3">Were you my Jupiter?</a></li>
+											<li><a href="#poem-4">Critical to Escape</a></li>
 										</ul>
 									</nav>
 								</div>
@@ -115,6 +116,15 @@
 										<p>verse of poem</p>
 										<div class="poem-nav-row">
 											<a href="#poem-2" class="back button-nav">Back to poems</a>
+											<a href="#poem-4" class="next-poem button-nav">Next &rarr;</a>
+										</div>
+									</section>
+								
+								    <section id="poem-4" class="poem hidden">
+										<h3>Poem title 4</h3>
+										<p>verse of poem</p>
+										<div class="poem-nav-row">
+											<a href="#poem-3" class="back button-nav">Back to poems</a>
 											<a href="#poem-1" class="next-poem button-nav">Next &rarr;</a>
 										</div>
 									</section>
@@ -440,6 +450,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
 
 
