--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 										<h3>Poem title 2</h3>
 									    <p>verse of poem 2</p>
 									    <div class="poem-nav-row">
-											<a href="#poem-1" class="back button-nav">Back to poems</a>
+											<a href="#poem-1" class="back button-nav">Previous poem</a>
 									        <a href="#poem-3" class="next-poem button-nav">Next &rarr;</a>
 										</div>
 									</section>
@@ -115,7 +115,7 @@
 										<h3>Poem title 3</h3>
 										<p>verse of poem</p>
 										<div class="poem-nav-row">
-											<a href="#poem-2" class="back button-nav">Back to poems</a>
+											<a href="#poem-2" class="back button-nav">Previous poem</a>
 											<a href="#poem-4" class="next-poem button-nav">Next &rarr;</a>
 										</div>
 									</section>
@@ -124,7 +124,7 @@
 										<h3>Poem title 4</h3>
 										<p>verse of poem</p>
 										<div class="poem-nav-row">
-											<a href="#poem-3" class="back button-nav">Back to poems</a>
+											<a href="#poem-3" class="back button-nav">Previous poem</a>
 											<a href="#poem-1" class="next-poem button-nav">Next &rarr;</a>
 										</div>
 									</section>
@@ -450,6 +450,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
 
 
