--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
 						<!-- Intro -->
 							<article id="intro" class="panel-main">
-								<h2 class="section-title">Intro</h2>
+								<h2 class="section-title">Introduction</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
 								<p>WHY SO CURIOUS? Stop <a href="#CV">Stalking Me!!</a>.</p>
 								<p>Will update soon</p>
@@ -451,6 +451,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
 
 
