--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 										<p class="intro">This poem does not have any space metaphors, but it being one of my first work made me add it here in this section</p>
 									    <p>verse of poem 1</p>
 									    <div class="poem-nav-row">
-											<a href="#Poem" class="back button-nav">Back to poems</a>
+											<a href="#poem" class="back button-nav">Back to poems</a>
 									        <a href="#poem-2" class="next-poem button-nav">Next &rarr;</a>
 									    </div>
 									</article>
@@ -451,6 +451,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
 
 
