--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 							</article>
 						
 						<!-- Poems -->
-						    <article id="poems" class="panel-main">
+						    <article id="poem" class="panel-main">
 								<div id="poem-welcome" class="poem-welcome active">
 									<h3>Welcome to my poetry collection!</h3>
 									<p>Would you like to view my poems?</p>
@@ -98,7 +98,7 @@
 										<p class="intro">This poem does not have any space metaphors, but it being one of my first work made me add it here in this section</p>
 									    <p>verse of poem 1</p>
 									    <div class="poem-nav-r ow">
-											<a href="#poems" class="back button-nav">Back to poems</a>
+											<a href="#poem" class="back button-nav">Back to poems</a>
 									        <a href="#poem-2" class="next-poem button-nav">Next &rarr;</a>
 									    </div>
 									</article>
@@ -451,6 +451,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
 
 
