--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 										</div>
 									</article>
 								
-								    <article id="poem-4" class="poem hidden">
+								    <article id="poem-4" class="poem panel-main">
 										<h3>Critical to Escape</h3>
 										<p>verse of poem</p>
 										<div class="poem-nav-row">
@@ -451,6 +451,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
 
 
