--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 								<div id="poem-welcome" class="poem-welcome active">
 									<h3>Welcome to my poetry collection!</h3>
 									<p>Would you like to view my poems?</p>
-									<button id="view-poem-btn" class="button-nav">See poems</button>
+									<button id="view-poem-btn" class="pink-btn">See poems</button>
 								</div>
 								
 								<article id="poem-list" class="poem-list hidden">
@@ -451,6 +451,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
 
 
