--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 						    <article id="poem" class="panel-main">
 								<div id="poem-welcome" class="poem-welcome active">
 									<h3>Welcome to my poetry collection!</h3>
-									<p>Would you like to view my poems?</p>
+									<p>This is where I pour my feelings and "let-go" of any bitterness by interconnecting my emotions "metaphorically" with space <3</p>
 									<button id="view-poem-btn" class="button-nav">See poems</button>
 								</div>
 								
@@ -451,6 +451,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
 
 
