--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <h2 class="section-title">Poetry Collection</h2>
         <span class="image main"><img src="images/pic03.jpg" alt="Space Art" /></span>
         <p>This is where I pour my feelings and "let-go" of any bitterness by interconnecting my emotions "metaphorically" with space &lt;3</p>
-        <div style="text-align: center;">
+        <div style="text-align: center; width: 100%; margin-top: 2rem;">
             <!-- CHANGED: Added data-target="poem-list" -->
             <button class="button-nav" data-target="poem-list">Enter Archive</button>
         </div>
@@ -463,6 +463,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
 
 
