--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
     <!-- Social Icons: Visible immediately on the main screen -->
     <ul class="icons">
         <li><a href="https://instagram.com/astropawana" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-        <li><a href="https://www.linkedin.com/in/pawana-shettigar" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+        <li><a href="https://www.linkedin.com/in/pawana shettigar" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 	</ul>
 
     <!-- Clean Copyright & License Info -->
@@ -463,6 +463,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
 
 
