--- a/index.html
+++ b/index.html
@@ -151,12 +151,13 @@
     <!-- Tech Arsenal Section -->
     <h3 class="major" style="margin-top: 3rem;">Technical Arsenal</h3>
     <div class="tech-arsenal">
-        <div class="arsenal-item"><i class="fab fa-python"></i> Python</div>
-        <div class="arsenal-item"><i class="fas fa-database"></i> NASA Open Data</div>
-        <div class="arsenal-item"><i class="fas fa-satellite"></i> System Prototyping</div>
-        <div class="arsenal-item"><i class="fas fa-atom"></i> Cosmochemistry</div>
-        <div class="arsenal-item"><i class="fas fa-code"></i> Web Dev (HTML/CSS)</div>
+        
         <div class="arsenal-item"><i class="fas fa-pen-fancy"></i> Scientific Writing</div>
+		<div class="arsenal-item"><i class="fab fa-python"></i> 2 </div>
+        <div class="arsenal-item"><i class="fas fa-database"></i> 3 </div>
+        <div class="arsenal-item"><i class="fas fa-satellite"></i> 4</div>
+        <div class="arsenal-item"><i class="fas fa-atom"></i> 5 </div>
+        <div class="arsenal-item"><i class="fas fa-code"></i> 6 </div>
     </div>
 
 </article>
@@ -194,10 +195,9 @@
         <div style="text-align: center; margin-top: 3rem;">
             <button id="pluto-btn" class="pluto-button">💌</button>
             <p style="font-size: 0.75rem; opacity: 0.7; margin-top: 0.5rem;">
-                Something's twinkling...
+                Something's twinkling... [PS:Click for Extras]
             </p>
-        </div>
-    </div>
+		</div>
 	
     <!-- Screen 3: Individual Poems -->
     
@@ -327,7 +327,7 @@
         <div class="shooting-star"></div>
         <div class="shooting-star"></div>
     </div>
-</article>
+</div>
 
 						<!-- Cosmic vault -->
 						    <article id="cosmic-vault" class="panel-main">
@@ -401,6 +401,7 @@
 
 	</body>
 </html>
+
 
 
 
