--- a/index.html
+++ b/index.html
@@ -144,7 +144,32 @@
                     <span class="tech-tag">Research</span>
                 </div>
             </div>
-        </div>
+		</div>
+
+		<!-- Project 4: PPP -->
+        <div class="mission-card">
+            <div class="mission-status pulse-green">Status: Prototyping</div>
+            <div class="mission-image">
+                <!-- Use a techy/blueprint image for this -->
+                <img src="images/pic04.jpg" alt="LAMES Project" />
+                <div class="mission-overlay">
+                    <a href="#" class="view-btn">View -- </a>
+                </div>
+            </div>
+			
+            <div class="mission-content">
+                <h3>Project: Pause, Prove and Protect</h3>
+                <p class="mission-desc">
+                    <strong>Group Project:</strong> Internet Saftey and -
+                </p>
+                <div class="mission-payload">
+                    <span class="tech-tag">Proposal writing</span>
+                    <span class="tech-tag">-</span>
+                    <span class="tech-tag">-</span>
+                </div>
+            </div>
+		</div>
+
 
     </div>
 
@@ -447,6 +472,7 @@
 		
 	</body>
 </html>
+
 
 
 
