--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 <!-- Use a techy/blueprint image for this -->
                 <img src="images/pic01.jpg" alt="LAMES Project" />
                 <div class="mission-overlay">
-                    <a href="#" class="view-btn">View -- </a>
+                    <a href="#" class="view-btn">View Proeject Proposal </a>
                 </div>
             </div>
             <div class="mission-content">
@@ -108,7 +108,7 @@
             <div class="mission-image">
                 <img src="images/pic02.jpg" alt="Seyfert Galaxy Research" />
                 <div class="mission-overlay">
-                    <a href="#" class="view-btn">Read Abstract</a>
+                    <a href="#" class="view-btn">Read Review</a>
                 </div>
             </div>
             <div class="mission-content">
@@ -140,7 +140,7 @@
                 </p>
                 <div class="mission-payload">
                     <span class="tech-tag">Human Factors</span>
-                    <span class="tech-tag">Space Architecture</span>
+                    <span class="tech-tag">Space Psychology</span>
                     <span class="tech-tag">Research</span>
                 </div>
             </div>
@@ -472,6 +472,7 @@
 		
 	</body>
 </html>
+
 
 
 
