--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
                     <strong>Personal Project:</strong> Designing an autonomous escort system for Lunar and Mars for -
                 </p>
                 <div class="mission-payload">
-                    <span class="tech-tag">Python</span>
-                    <span class="tech-tag">TTS</span>
+                    <span class="tech-tag"></span>
+                    <span class="tech-tag"></span>
                     <span class="tech-tag">System Design</span>
                 </div>
             </div>
@@ -214,7 +214,6 @@
                 <li><button class="text-link" data-target="poem-4">Critical to Escape</button></li>
             </ul>
         </nav>
-    </div>
 
      <!-- NEW: Pluto Button -->
         <div style="text-align: center; margin-top: 3rem;">
@@ -223,6 +222,7 @@
                 Something's twinkling... [PS:Click for Extras]
             </p>
 		</div>
+	</div>
 	
     <!-- Screen 3: Individual Poems -->
     
@@ -472,6 +472,7 @@
 		
 	</body>
 </html>
+
 
 
 
