--- a/index.html
+++ b/index.html
@@ -208,7 +208,12 @@
         <nav class="poem-nav">
             <ul>
                 <!-- CHANGED: All <a> become <button class="text-link"> with data-target -->
-                <li><button class="text-link" data-target="poem-1">Thought I finally seized the edge</button></li>
+                <li>
+					<button class="button-nav text-link" data-target="poem-1">
+						Though I finally seized the edge 
+						<span class="subtitle">(Biometric Prison)</span>
+					</button>
+				</li>
                 <li><button class="text-link" data-target="poem-2">The Whispers of the Galaxies</button></li>
                 <li><button class="text-link" data-target="poem-3">Were you my Jupiter?</button></li>
                 <li><button class="text-link" data-target="poem-4">Critical to Escape</button></li>
@@ -529,6 +534,7 @@
 		
 	</body>
 </html>
+
 
 
 
