--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
     
   <!-- Poem 1: Thought I finally seized the edge -->
 <div id="poem-1" class="poem hidden">
-    <h2 class="section-title">Though I finally seized the edge</h2>
+    <h2 class="section-title">Thought I finally seized the edge</h2>
     
     <div class="simple-poem-content">
         <div class="verse-stanza">
@@ -494,6 +494,7 @@
 		
 	</body>
 </html>
+
 
 
 
