--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
     <div class="simple-poem-content">
         <div class="verse-stanza">
             <p>In a cage, with key in the pocket wearing an attire with no pockets</p>
-            <p>They own the keys, they own the cage, they sit on their thrones with their rusty <em>lockets</em></p>
+            <p>They own the keys, they own the cage, they sit on their thrones with their rusty lockets</p>
         </div>
         
         <div class="verse-stanza">
@@ -494,6 +494,7 @@
 		
 	</body>
 </html>
+
 
 
 
