--- a/index.html
+++ b/index.html
@@ -245,10 +245,9 @@
         <div class="verse-stanza">
             <p>Gazed at me with their sympathetic eyes</p>
             <p>And gave the key as a frozen prize</p>
-           
         </div>
         
-        <div class="verse-stanza climax">
+        <div class="verse-stanza">
             <p>My heart whispered "That's a trick"</p>
             <p>Crept towards the lock with the freedom in my hands</p>
             <p>only to realize the lock was my biometric</p>
@@ -494,6 +493,7 @@
 		
 	</body>
 </html>
+
 
 
 
