--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
         <div class="verse-stanza">
             <p>My heart whispered "That's a trick"</p>
             <p>Crept towards the lock with the freedom in my hands</p>
-            <p>only to realize the lock was my biometric</p>
+            <p>only to realize the lock was my <em>biometric</em></p>
         </div>
     </div>
     
@@ -493,6 +493,7 @@
 		
 	</body>
 </html>
+
 
 
 
