--- a/index.html
+++ b/index.html
@@ -237,8 +237,8 @@
         
         <div class="verse-stanza">
              <p>Ohh! Privilege of their sanctimonious greed</p>
-			 <p>I can sense their witty smile;</p>
-             <p>As I shed the tears of ordeal, clawing through their bluest flames for the key</p>
+			 <p>I can sense their witty smile; As I shed the tears of ordeal</p>
+             <p>Clawing through their bluest flames for the key</p>
              <p>With my hopes dying in their cold decree</p>
         </div>
         
@@ -493,6 +493,7 @@
 		
 	</body>
 </html>
+
 
 
 
