--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
     
     <div class="simple-poem-content">
         <div class="verse-stanza">
-            <p>When the bill of my deferred dreams was due</p>
+            <p>With the bill of my deferred dreams due</p>
             <p>Knocked on a door carved to refuse</p>
         </div>
         
@@ -329,7 +329,7 @@
             <p>Was it just me?</p>
             <p>Or was it the rest three?</p>
             <p>Or was it the ones that revolve around you?</p>
-            <p>Did you see me while you're surrounded by the <em>nighty fives</em></p>
+            <p>Did you see me while you were surrounded by the <em>nighty fives</em></p>
             <p>Hello?</p>
             <p>Where'd I go (4 u)?</p>
         </div>
@@ -610,6 +610,7 @@
 		
 	</body>
 </html>
+
 
 
 
