--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
         <div class="verse-stanza">
             <p>Would you care if you saw my bruises?</p>
             <p>Or would it just blend with the other ninety fives?</p>
-            <p>I think you would or I think it would</p>
+            <p>I wish you would, but I think it would</p>
         </div>
     </div>
     
@@ -610,6 +610,7 @@
 		
 	</body>
 </html>
+
 
 
 
