--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 <!-- Use a techy/blueprint image for this -->
                 <img src="images/pic01.jpg" alt="LAMES Project" />
                 <div class="mission-overlay">
-                    <a href="#" class="view-btn">View Proeject Proposal </a>
+                    <a href="#" class="view-btn">View Pject Proposal</a>
                 </div>
             </div>
             <div class="mission-content">
@@ -103,7 +103,7 @@
 
         <!-- Project 2: Seyfert Galaxies -->
         <div class="mission-card">
-            <div class="mission-status pulse-blue">Status: </div>
+            <div class="mission-status pulse-blue">Status: Proof reading </div>
             <div class="mission-image">
                 <img src="images/pic02.jpg" alt="Seyfert Galaxy Research" />
                 <div class="mission-overlay">
@@ -152,7 +152,7 @@
                 <!-- Use a techy/blueprint image for this -->
                 <img src="images/pic01.jpg" alt="LAMES Project" />
                 <div class="mission-overlay">
-                    <a href="#" class="view-btn">View -- </a>
+                    <a href="#" class="view-btn">View Web Prototype </a>
                 </div>
             </div>
 			
@@ -566,6 +566,7 @@
 		
 	</body>
 </html>
+
 
 
 
