--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 <!-- Use a techy/blueprint image for this -->
                 <img src="images/pic01.jpg" alt="LAMES Project" />
                 <div class="mission-overlay">
-                    <a href="#" class="view-btn">View Pject Proposal</a>
+                    <a href="#" class="view-btn">View Project Proposal</a>
                 </div>
             </div>
             <div class="mission-content">
@@ -566,6 +566,7 @@
 		
 	</body>
 </html>
+
 
 
 
