--- a/index.html
+++ b/index.html
@@ -211,16 +211,16 @@
             <div class="card-icon"><i class="fas fa-meteor"></i></div>
             <h3>Thought I finally seized the edge</h3>
         </div>
-
+       
         <div class="star-card" data-target="poem-2">
-            <div class="card-icon"><i class="fas fa-globe-americas"></i></div>
-            <h3>The Whispers of the Galaxies</h3>
-        </div>
+			<div class="card-icon"><i class="fas fa-bahai"></i></div>
+			<h3>The Whispers of the Galaxies</h3>
+		</div>
 
         <div class="star-card" data-target="poem-3">
-            <div class="card-icon"><i class="fas fa-sun"></i></div>
-            <h3>Were you my Jupiter?</h3>
-        </div>
+			<div class="card-icon"><i class="fas fa-ring"></i></div>
+			<h3>Were you my Jupiter?</h3>
+		</div>
 
         <div class="star-card" data-target="poem-4">
             <div class="card-icon"><i class="fas fa-shuttle-space"></i></div>
@@ -230,7 +230,7 @@
     </div>
 
     <div style="text-align: center; margin-top: 3rem;">
-        <button id="pluto-btn" class="pluto-button">💌</button>
+        <button id="pluto-btn" class="pluto-button-clean">💌</button>
         <p style="font-size: 0.75rem; opacity: 0.7; margin-top: 0.5rem;">
             Something's twinkling... [PS: Click for Extras]
         </p>
@@ -578,6 +578,7 @@
 		
 	</body>
 </html>
+
 
 
 
