--- a/index.html
+++ b/index.html
@@ -208,29 +208,29 @@
     <div class="star-map-grid">
         
         <div class="star-card" data-target="poem-1">
-            <div class="card-icon"><i class="fas fa-meteor"></i></div>
+            <div class="card-icon"><i class="fas fa-meteor anim-meteor"></i></div>
             <h3>Thought I finally seized the edge</h3>
         </div>
        
         <div class="star-card" data-target="poem-2">
-			<div class="card-icon"><i class="fas fa-bahai"></i></div>
+			<div class="card-icon"><i class="fas fa-bahai anim-galaxy"></i></div>
 			<h3>The Whispers of the Galaxies</h3>
 		</div>
 
         <div class="star-card" data-target="poem-3">
-			<div class="card-icon"><i class="fas fa-ring"></i></div>
+			<div class="card-icon"><i class="fas fa-shield-halved anim-jupiter"></i></div>
 			<h3>Were you my Jupiter?</h3>
 		</div>
 
         <div class="star-card" data-target="poem-4">
-            <div class="card-icon"><i class="fas fa-shuttle-space"></i></div>
+            <div class="card-icon"><i class="fas fa-shuttle-space anim-escape"></i></div>
             <h3>Critical to Escape</h3>
         </div>
 
     </div>
 
     <div style="text-align: center; margin-top: 3rem;">
-        <button id="pluto-btn" class="pluto-button-clean">💌</button>
+        <button id="pluto-btn" class="pluto-twinkle">💌</button>
         <p style="font-size: 0.75rem; opacity: 0.7; margin-top: 0.5rem;">
             Something's twinkling... [PS: Click for Extras]
         </p>
@@ -578,6 +578,7 @@
 		
 	</body>
 </html>
+
 
 
 
