--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
         <!-- Project 3: Space Psychology -->
         <div class="mission-card">
-            <div class="mission-status pulse-purple">Status: </div>
+            <div class="mission-status pulse-purple">Status: Writing in progress</div>
             <div class="mission-image">
                 <img src="images/pic03.jpg" alt="Space Habitat" />
                 <div class="mission-overlay">
@@ -578,6 +578,7 @@
 		
 	</body>
 </html>
+
 
 
 
