--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1 style="text-transform: none;">Pawana Shettigar</h1>
-								<p>Welcome to the cosmic universe of an aspiring astronomer (◠‿◠)</p>
+								<p class="typewriter">Welcome to the cosmic universe of an aspiring astronomer (◠‿◠)</p>
 							</div>
 						</div>
 						<nav>
@@ -596,6 +596,7 @@
 		
 	</body>
 </html>
+
 
 
 
